--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -11,7 +11,7 @@ linters-settings:
     custom-order: true
     sections:
       - standard
-      - prefix(github.com/Dreamacro/clash)
+      - prefix(github.com/secpe/clash)
       - default
   staticcheck:
     go: '1.19'
